--- a/app/src/main/res/values/strings_scouting.xml
+++ b/app/src/main/res/values/strings_scouting.xml
@@ -109,6 +109,7 @@
 
     <string-array name="Charts">
         <item>Cycles</item>
+        <item>Weighted Cycles</item>
         <item>Amp and Speaker</item>
         <item>Amp</item>
         <item>Speaker</item>
