--- a/app/src/main/res/layout/fragment_scout_teleop.xml
+++ b/app/src/main/res/layout/fragment_scout_teleop.xml
@@ -62,10 +62,10 @@
             />
 
         <TextView
-            android:id="@+id/TrapText"
+            android:id="@+id/PassesText"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
-            android:text="Trap"
+            android:text="Passes"
             android:textSize="35sp"
             android:textColor="#FFFFFF"
             android:gravity="center_horizontal|top"
@@ -73,13 +73,13 @@
             />
 
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
-            android:id="@+id/TrapCounter"
+            android:id="@+id/PassCounter"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
-            app:key="tele_traps" />
+            app:key="tele_passes" />
 />
 
     </LinearLayout>
