--- a/app/src/main/res/values/strings_scouting.xml
+++ b/app/src/main/res/values/strings_scouting.xml
@@ -16,7 +16,7 @@
         <item>5. Onstage w/ 2 Buddies</item>
     </string-array>
 
-    <string-array name="high_notes">
+    <string-array name="traps">
         <item>\t\t0\t\t</item>
         <item>\t\t1\t\t</item>
         <item>\t\t2\t\t</item>
