Finishing passing and high notes/traps switch, reworked max cycles, some format changes

--- a/app/src/main/res/layout/fragment_summaries_data.xml
+++ b/app/src/main/res/layout/fragment_summaries_data.xml
@@ -69,25 +69,50 @@
             app:explanation="Average number of Notes scored in the Amp during Tele."
             app:label="Average Amp" />
 
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAmpAccuracy
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Overall accuracy of robot in the Amp."
-            app:label="Amp Accuracy" />
-
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesMax
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="The max number of traps made"
-            app:label="Max Passes"
+            app:explanation="Max number of passes done during Tele."
+            app:label="Max Passes" />
 
-            />
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesAverage
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="The average number of traps made"
-            app:label="Average Passes"
-            />
+            app:explanation="Average number of passes done during Tele."
+            app:label="Average Passes" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:text="Endgame Overview" />
+
+        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndStage
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="The amount of times the robot ended with nothing vs the amount of matches\nThe amount of times the robot ended parked vs the amount of matches\nThe amount of times the robot ended tipped on the charge platform vs the amount of matches\nThe amount of times the robot ended engaged on the charge platform vs the amount of matches"
+            app:label="End Stage" />
+
+        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsMax
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="Max amount of traps scored in a match."
+            app:label="Max Traps" />
+
+        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsAverage
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="Average amount of traps scored in a match."
+            app:label="Average Traps" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:text="Cycles Overview" />
+
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMaxCycles
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -121,25 +146,6 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:text="Endgame Overview" />
-
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndStage
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="The amount of times the robot ended with nothing vs the amount of matches\nThe amount of times the robot ended parked vs the amount of matches\nThe amount of times the robot ended tipped on the charge platform vs the amount of matches\nThe amount of times the robot ended engaged on the charge platform vs the amount of matches"
-            app:label="End Stage" />
-
-        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndHighNotes
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="The amounts of high notes scored by their human player."
-            app:label="High Notes" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textStyle="bold"
             android:text="Averages Without Worst Match (WWM)" />
 
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMadeSpeakerAverageWWM
@@ -159,9 +165,15 @@
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTelePassesAverageWWM
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="The average number of traps made without the worst match"
+            app:explanation="The average number of passes made without the worst match"
             app:label="Average Passes WWM"
             />
+
+        <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataEndTrapsAverageWWM
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="The average number of traps scored without the worst match"
+            app:label="Average Traps WWM" />
 
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageCyclesWWM
             android:layout_width="match_parent"
