--- a/app/src/main/res/layout/fragment_scout_autonomous.xml
+++ b/app/src/main/res/layout/fragment_scout_autonomous.xml
@@ -271,4 +271,15 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="130dp"/>
 
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/AutonPreview"
+        android:background="@color/white"
+        android:text="Auton Preview"
+        android:textColor="@color/red"
+        />
+
 </RelativeLayout>
