Fixed graphs crashing

--- a/app/src/main/res/layout/fragment_summaries_data.xml
+++ b/app/src/main/res/layout/fragment_summaries_data.xml
@@ -130,14 +130,14 @@
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleMaxWeightedCycles
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Max number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, and trap having a weight of 2."
+            app:explanation="Max number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2."
             app:label="Max Weighted Cycles"
             />
 
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageWeightedCycles
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, and trap having a weight of 2."
+            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2."
             app:label="Average Weighted Cycles"
             />
 
@@ -185,7 +185,7 @@
         <org.wildstang.wildrank.androidv2.views.data.crescendo.comp.CompDataTeleAverageWeightedCyclesWWM
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, and trap having a weight of 2, without the worst match."
+            app:explanation="Average number of Cycles in a match with speaker having a weight of 1, amp having a weight of 1.25, passes having a weight of 0.6, and trap having a weight of 2, without the worst match."
             app:label="Average Weighted Cycles WWM"
             />
 
