--- a/app/src/main/res/layout/fragment_comparison_main.xml
+++ b/app/src/main/res/layout/fragment_comparison_main.xml
@@ -1,16 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="org.wildstang.wildrank.androidv2.fragments.TeamSummaries.TeamSummariesMainFragment">
-
-    <ListView
-        android:id="@+id/teams_list"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1.5"
-        android:choiceMode="singleChoice" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="0dp"
