--- a/app/src/main/res/values/strings_scouting.xml
+++ b/app/src/main/res/values/strings_scouting.xml
@@ -116,6 +116,12 @@
         <item>Auto</item>
     </string-array>
 
+    <string-array name="Sorting">
+        <item>Team Number</item>
+        <item>Descending</item>
+        <item>Ascending</item>
+    </string-array>
+
 
     <string name="autonomous_explanation">This Screen is for Autonomous Game Actions Only.</string>
     <string name="cycle">Single Shot Cycle</string>
