--- a/app/src/main/res/layout/fragment_auto_path.xml
+++ b/app/src/main/res/layout/fragment_auto_path.xml
@@ -11,9 +11,7 @@
         <org.wildstang.wildrank.androidv2.views.data.crescendo.AutosDataView
             android:id="@+id/autosview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
+            android:layout_height="wrap_content"
             app:label=""
             app:explanation="All the different paths the robot has run, not including duplicates"/>
     </ScrollView>
