--- a/app/src/main/res/layout/fragment_scout_autonomous.xml
+++ b/app/src/main/res/layout/fragment_scout_autonomous.xml
@@ -118,27 +118,7 @@
             android:layout_height="150dp"
             android:clickable="true"
             android:layout_marginLeft="-225dp"
-            android:layout_marginTop="294dp"
-            android:visibility="invisible"/>
-
-        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
-            android:id="@+id/redbutton10"
-            app:key="redbutton10"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:clickable="true"
-            android:layout_marginLeft="-40dp"
-            android:layout_marginTop="485dp"
-            android:visibility="invisible"/>
-
-        <TextView
-            android:id="@+id/redlabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Amp"
-            android:textColor="@color/StrykeForce"
-            android:layout_marginTop="500dp"
-            android:layout_marginLeft="-135dp"
+            android:layout_marginTop="219dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -237,28 +217,68 @@
             android:layout_height="150dp"
             android:clickable="true"
             android:layout_marginLeft="60dp"
-            android:layout_marginTop="288dp"
+            android:layout_marginTop="208dp"
             android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/redSpeakerMake"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Make"
+            android:textColor="@color/white"
+            android:layout_marginTop="285dp"
+            android:layout_marginLeft="-510dp"
+            android:visibility="invisible" />
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
+            android:id="@+id/redbutton10"
+            app:key="redbutton10"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:clickable="true"
+            android:layout_marginLeft="-131dp"
+            android:layout_marginTop="375dp"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/redSpeakerMiss"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Miss"
+            android:textColor="@color/white"
+            android:layout_marginTop="440dp"
+            android:layout_marginLeft="3dp"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/blueSpeakerMake"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Make"
+            android:textColor="@color/white"
+            android:layout_marginTop="275dp"
+            android:layout_marginLeft="353dp"
+            android:visibility="invisible" />
 
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
             android:id="@+id/bluebutton10"
             app:key="bluebutton10"
             android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_height="150dp"
             android:clickable="true"
-            android:layout_marginLeft="-165dp"
-            android:layout_marginTop="485dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="368dp"
             android:visibility="invisible"/>
 
         <TextView
-            android:id="@+id/bluelabel"
+            android:id="@+id/blueSpeakerMiss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Amp"
-            android:textColor="@color/StrykeForce"
-            android:layout_marginTop="485dp"
-            android:layout_marginLeft="5dp"
-            android:visibility="invisible"/>
+            android:text="Miss"
+            android:textColor="@color/white"
+            android:layout_marginTop="435dp"
+            android:layout_marginLeft="-127dp"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
