--- a/app/src/main/res/layout/fragment_scout_autonomous.xml
+++ b/app/src/main/res/layout/fragment_scout_autonomous.xml
@@ -236,7 +236,7 @@
             android:layout_width="100dp"
             android:layout_height="150dp"
             android:clickable="true"
-            android:layout_marginLeft="-131dp"
+            android:layout_marginLeft="-138dp"
             android:layout_marginTop="375dp"
             android:visibility="invisible"/>
 
@@ -257,7 +257,7 @@
             android:text="Make"
             android:textColor="@color/white"
             android:layout_marginTop="275dp"
-            android:layout_marginLeft="353dp"
+            android:layout_marginLeft="341dp"
             android:visibility="invisible" />
 
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
@@ -266,7 +266,7 @@
             android:layout_width="100dp"
             android:layout_height="150dp"
             android:clickable="true"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="4dp"
             android:layout_marginTop="368dp"
             android:visibility="invisible"/>
 
@@ -277,7 +277,87 @@
             android:text="Miss"
             android:textColor="@color/white"
             android:layout_marginTop="435dp"
-            android:layout_marginLeft="-127dp"
+            android:layout_marginLeft="-133dp"
+            android:visibility="invisible" />
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
+            android:id="@+id/redposbutton3"
+            app:key="redposbutton3"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:layout_marginLeft="-490dp"
+            android:layout_marginTop="207dp"
+            android:visibility="invisible"/>
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
+            android:id="@+id/redposbutton1"
+            app:key="redposbutton1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:layout_marginLeft="-100dp"
+            android:layout_marginTop="429dp"
+            android:visibility="invisible"/>
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
+            android:id="@+id/redposbutton2"
+            app:key="redposbutton2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:layout_marginLeft="-50dp"
+            android:layout_marginTop="318dp"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/redposlabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select a Starting Position:"
+            android:textColor="@color/white"
+            android:layout_marginTop="177dp"
+            android:layout_marginLeft="-153dp"
+            android:visibility="invisible" />
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
+            android:id="@+id/blueposbutton3"
+            app:key="redposbutton3"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:layout_marginLeft="315dp"
+            android:layout_marginTop="202dp"
+            android:visibility="invisible"/>
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
+            android:id="@+id/blueposbutton1"
+            app:key="redposbutton1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:layout_marginLeft="-100dp"
+            android:layout_marginTop="424dp"
+            android:visibility="invisible"/>
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingButtonView
+            android:id="@+id/blueposbutton2"
+            app:key="redposbutton2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:layout_marginLeft="-150dp"
+            android:layout_marginTop="313dp"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/blueposlabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select a Starting Position:"
+            android:textColor="@color/white"
+            android:layout_marginTop="177dp"
+            android:layout_marginLeft="-110dp"
             android:visibility="invisible" />
 
     </LinearLayout>
