Added match number in team summaries graphs, fixed auto graph, added passing graphs (should work but untested, emulator is unhelpful), added starting position to unique autos

--- a/app/src/main/res/values/strings_scouting.xml
+++ b/app/src/main/res/values/strings_scouting.xml
@@ -113,6 +113,7 @@
         <item>Amp and Speaker</item>
         <item>Amp</item>
         <item>Speaker</item>
+        <item>Passes</item>
         <item>Auto</item>
     </string-array>
 
